Add draggable grid feature with marquee effect and associated assets
- Introduced a new draggable grid section in `draggable-grid-section.html` for showcasing products.
- Added CSS styles in `draggable-grid.css` for the grid and marquee animations.
- Implemented JavaScript functionality in `draggable-grid.js` to handle the marquee effect and item interactions.
- Included new images and font assets for the draggable grid.
- Updated `index.html` to integrate the new draggable grid section and styles.
- Created a local settings file for permissions related to the draggable grid.

--- a/corano/index.html
+++ b/corano/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="assets/css/plugins/jqueryui.min.css">
     <!-- main style css -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/draggable-grid.css">
 
 </head>
 
@@ -1828,6 +1829,42 @@
         </section>
         <!-- product banner statistics area end -->
 
+        <!-- vase marquee area start -->
+        <section class="draggable-product-marquee section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="draggable-grid-container">
+                            <div class="marquee-track">
+                                <div class="marquee-item">
+                                    <img src="assets/draggable-grid-public/img-1.png" alt="Vase Collection" />
+                                </div>
+                                <div class="marquee-item">
+                                    <img src="assets/draggable-grid-public/img-2.png" alt="Vase Collection" />
+                                </div>
+                                <div class="marquee-item">
+                                    <img src="assets/draggable-grid-public/img-3.png" alt="Vase Collection" />
+                                </div>
+                                <div class="marquee-item">
+                                    <img src="assets/draggable-grid-public/img-4.png" alt="Vase Collection" />
+                                </div>
+                                <div class="marquee-item">
+                                    <img src="assets/draggable-grid-public/img-5.png" alt="Vase Collection" />
+                                </div>
+                                <div class="marquee-item">
+                                    <img src="assets/draggable-grid-public/img-6.png" alt="Vase Collection" />
+                                </div>
+                                <div class="marquee-item">
+                                    <img src="assets/draggable-grid-public/img-7.png" alt="Vase Collection" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- vase marquee area end -->
+
         <!-- featured product area start -->
         <section class="feature-product section-padding">
             <div class="container">
@@ -3327,6 +3364,7 @@
     <script src="assets/js/plugins/google-map.js"></script>
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/draggable-grid.js"></script>
 </body>
 
 </html>
