--- a/corano/index.html
+++ b/corano/index.html
@@ -711,6 +711,18 @@
         </section>
         <!-- vase marquee area end -->
 
+        <!-- Vase Details Panel -->
+        <div class="vase-details-overlay" id="vaseDetailsOverlay"></div>
+        <div class="vase-details-panel" id="vaseDetailsPanel">
+            <button class="vase-details-close" id="vaseDetailsClose">×</button>
+            <h3 class="vase-details-title">Yellow Vase</h3>
+            <div class="vase-details-price">$300.00</div>
+            <div class="vase-details-description">
+                Generous in size and striking in presence, the large yellow vase makes a bold decorative statement. Its smooth curves and sunny shade are perfect for standing on the floor or dressing up a wide console. Both functional and eye-catching, it brings vitality and a contemporary edge to your interior design.
+            </div>
+            <button class="vase-details-add-cart">Add to Cart</button>
+        </div>
+
         <!-- featured product area start -->
         <section class="feature-product section-padding">
             <div class="container">
