feat: Add logo and change all name to jevoo jewellery

--- a/corano/index.html
+++ b/corano/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Corano - Jewelry Shop eCommerce Bootstrap 5 Template</title>
+    <title>Jevoo Jewellery - Jewelry Shop eCommerce Bootstrap 5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -46,7 +46,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewelry online store</p>
+                                <p>Welcome to Jevoo Jewellery online store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -85,7 +85,7 @@
                         <div class="col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo" style="max-height: 100px; width: auto; padding-left: 20%;">
                                 </a>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                         <div class="mobile-main-header">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo" style="max-height: 100px; width: auto; padding-left: 20%;">
                                 </a>
                             </div>
                             <div class="mobile-menu-toggler">
@@ -536,7 +536,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="twitter-feed-content text-center">
-                            <p>Check out "Corano - Multipurpose eCommerce Bootstrap 5 template" on #Envato by @<a href="#">Corano</a> #Themeforest <a href="http://1.envato.market/9LbxW">http://1.envato.market/9LbxW</a></p>
+                            <p>Check out "Jevoo Jewellery - Multipurpose eCommerce Bootstrap 5 template" on #Envato by @<a href="#">Jevoo Jewellery</a> #Themeforest <a href="http://1.envato.market/9LbxW">http://1.envato.market/9LbxW</a></p>
                         </div>
                     </div>
                 </div>
@@ -1759,7 +1759,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo Jewellery</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">Celebrity Daughter Opens Up About Having Her Eye Color Changed</a>
@@ -1777,7 +1777,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo Jewellery</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">Children Left Home Alone For 4 Days In TV series Experiment</a>
@@ -1795,7 +1795,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo Jewellery</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">Lotto Winner Offering Up Money To Any Man That Will Date Her</a>
@@ -1813,7 +1813,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo Jewellery</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">People are Willing Lie When Comes Money, According to Research</a>
@@ -1831,7 +1831,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo Jewellery</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">romantic Love Stories Of Hollywoodâ€™s Biggest Celebrities</a>
@@ -1923,7 +1923,7 @@
                             <div class="widget-title">
                                 <div class="widget-logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo/logo.png" alt="brand logo">
+                                        <img src="assets/img/jevoo-bespoke.jpg" alt="brand logo" style="max-height: 100px; width: auto; padding-left: 20%;">
                                     </a>
                                 </div>
                             </div>
@@ -2003,7 +2003,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="copyright-text text-center">
-                            <p>&copy; 2022 <b>Corano</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
+                            <p>&copy; 2022 <b>Jevoo Jewellery</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
                         </div>
                     </div>
                 </div>
