feat: Update navigation and branding for Jevoo Jewellery
- Changed all instances of "Corano" to "Jevoo Jewellery" across multiple HTML files.
- Updated logo images to reflect the new branding.
- Introduced a reusable navigation component to streamline header management.
- Enhanced mobile navigation functionality and improved overall layout consistency.

--- a/corano/about-us.html
+++ b/corano/about-us.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Corano - Jewelry Shop eCommerce Bootstrap 5 Template</title>
+    <title>Jevoo Jewellery - About Us</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,7 +45,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewelry online store</p>
+                                <p>Welcome to Jevoo Jewellery online store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -84,7 +84,7 @@
                         <div class="col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="assets/img/jevoo-bespoke.jpg" alt="brand logo" style="max-height: 100px; width: auto; padding-left: 20%;">
                                 </a>
                             </div>
                         </div>
@@ -97,17 +97,10 @@
                                     <!-- main menu navbar start -->
                                     <nav class="desktop-menu">
                                         <ul>
-                                            <li class="active"><a href="index.html">Home <i class="fa fa-angle-down"></i></a>
-                                                <ul class="dropdown">
-                                                    <li><a href="index.html">Home version 01</a></li>
-                                                    <li><a href="index-2.html">Home version 02</a></li>
-                                                    <li><a href="index-3.html">Home version 03</a></li>
-                                                    <li><a href="index-4.html">Home version 04</a></li>
-                                                    <li><a href="index-5.html">Home version 05</a></li>
-                                                    <li><a href="index-6.html">Home version 06</a></li>
-                                                </ul>
+                                            <li><a href="index.html">Home</a>
                                             </li>
-                                            <li class="position-static"><a href="#">pages <i class="fa fa-angle-down"></i></a>
+                                            <li class="active"><a href="about-us.html">About Us</a></li>
+                                            <li class="position-static" style="display: none;"><a href="#">pages <i class="fa fa-angle-down"></i></a>
                                                 <ul class="megamenu dropdown">
                                                     <li class="mega-title"><span>column 01</span>
                                                         <ul>
@@ -194,7 +187,7 @@
                                                     <li><a href="blog-details-image.html">blog details image</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact-us.html">Contact us</a></li>
+                                            <li style="display: none;"><a href="contact-us.html">Contact us</a></li>
                                         </ul>
                                     </nav>
                                     <!-- main menu navbar end -->
@@ -251,38 +244,26 @@
         <!-- main header start -->
 
         <!-- mobile header start -->
-        <!-- mobile header start -->
-        <div class="mobile-header d-lg-none d-md-block sticky">
-            <!--mobile header top start -->
-            <div class="container-fluid">
-                <div class="row align-items-center">
+        <div class="mobile-main-header">
+            <div class="container">
+                <div class="row">
                     <div class="col-12">
-                        <div class="mobile-main-header">
+                        <div class="mobile-main-header-wrap">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="assets/img/jevoo-logo.jpg" alt="Brand Logo" style="max-height: 100px; width: auto; padding-left: 20%;">
                                 </a>
                             </div>
                             <div class="mobile-menu-toggler">
-                                <div class="mini-cart-wrap">
-                                    <a href="cart.html">
-                                        <i class="pe-7s-shopbag"></i>
-                                        <div class="notification">0</div>
-                                    </a>
-                                </div>
-                                <button class="mobile-menu-btn">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                <button class="mobile-menu-toggle">
+                                    <i class="pe-7s-menu"></i>
                                 </button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- mobile header top start -->
         </div>
-        <!-- mobile header end -->
         <!-- mobile header end -->
 
         <!-- offcanvas mobile menu start -->
@@ -310,18 +291,11 @@
                         <!-- mobile menu navigation start -->
                         <nav>
                             <ul class="mobile-menu">
-                                <li class="menu-item-has-children"><a href="index.html">Home</a>
-                                    <ul class="dropdown">
-                                        <li><a href="index.html">Home version 01</a></li>
-                                        <li><a href="index-2.html">Home version 02</a></li>
-                                        <li><a href="index-3.html">Home version 03</a></li>
-                                        <li><a href="index-4.html">Home version 04</a></li>
-                                        <li><a href="index-5.html">Home version 05</a></li>
-                                        <li><a href="index-6.html">Home version 06</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children"><a href="#">pages</a>
-                                    <ul class="megamenu dropdown">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about-us.html">About Us</a></li>
+                            </ul>
+                        </nav>
+                                                            <ul class="megamenu dropdown">
                                         <li class="mega-title menu-item-has-children"><a href="#">column 01</a>
                                             <ul class="dropdown">
                                                 <li><a href="shop.html">shop grid left sidebar</a></li>
@@ -495,12 +469,12 @@
                     </div>
                     <div class="col-lg-7">
                         <div class="about-content">
-                            <h2 class="about-title">About Us</h2>
-                            <h5 class="about-sub-title">
-                                Founded in 1986, I.D. Jewelry, LLC, a family owned & operated business has become a house-hold name in states all over the USA as well as countries all over the world.
-                            </h5>
-                            <p>For those that rather the full immersion of the in store experience we welcome your company and look forward to meeting you face to face. Being located in the 47 street diamond district, known to be the largest diamond.</p>
-                            <p>Based in the heart of New York’s Diamond District, also known as the NYC diamond district, I. D. Jewelry has some of the most competitively priced in the market. It is our goal to supply our clients.</p>
+                            <h2 class="about-title">💎 Jevoo Jewellery</h2>
+                            <h5 class="about-sub-title">Crafted for You. Inspired by You.</h5>
+                            <p>🕊️ About Us</p>
+                            <p>At Jevoo Jewellery, we believe that true luxury lies in individual expression. Founded on the idea of Jewel + For + You, Jevoo is a bespoke jewellery house dedicated to transforming your imagination into timeless elegance.</p>
+                            <p>Every piece we create is handcrafted to order — designed from your ideas, refined by our artisans, and perfected through the finest materials and techniques. Whether you come to us with a concept, a sketch, or a story, our design team will bring it to life with precision, passion, and artistry.</p>
+                            <p>From classic engagement rings to modern heirlooms, Jevoo stands for personalised luxury that's truly yours — not mass produced, but made with care, character, and purpose.</p>
                         </div>
                     </div>
                 </div>
@@ -733,7 +707,7 @@
                             <div class="widget-title">
                                 <div class="widget-logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo/logo.png" alt="brand logo">
+                                        <img src="assets/img/jevoo-bespoke.jpg" alt="brand logo" style="max-height: 100px; width: auto; padding-left: 20%;">
                                     </a>
                                 </div>
                             </div>
@@ -1037,6 +1011,8 @@
     <script src="assets/js/plugins/google-map.js"></script>
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
+    <!-- Navigation Component Loader -->
+    <script src="components/navigation-loader.js"></script>
 </body>
 
 </html>
