--- a/corano/shop.html
+++ b/corano/shop.html
@@ -97,16 +97,7 @@
                                     <!-- main menu navbar start -->
                                     <nav class="desktop-menu">
                                         <ul>
-                                            <li class="active"><a href="index.html">Home <i class="fa fa-angle-down"></i></a>
-                                                <ul class="dropdown">
-                                                    <li><a href="index.html">Home version 01</a></li>
-                                                    <li><a href="index-2.html">Home version 02</a></li>
-                                                    <li><a href="index-3.html">Home version 03</a></li>
-                                                    <li><a href="index-4.html">Home version 04</a></li>
-                                                    <li><a href="index-5.html">Home version 05</a></li>
-                                                    <li><a href="index-6.html">Home version 06</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="index.html">Home</a></li>
                                             <li class="position-static"><a href="#">pages <i class="fa fa-angle-down"></i></a>
                                                 <ul class="megamenu dropdown">
                                                     <li class="mega-title"><span>column 01</span>
@@ -310,16 +301,7 @@
                         <!-- mobile menu navigation start -->
                         <nav>
                             <ul class="mobile-menu">
-                                <li class="menu-item-has-children"><a href="index.html">Home</a>
-                                    <ul class="dropdown">
-                                        <li><a href="index.html">Home version 01</a></li>
-                                        <li><a href="index-2.html">Home version 02</a></li>
-                                        <li><a href="index-3.html">Home version 03</a></li>
-                                        <li><a href="index-4.html">Home version 04</a></li>
-                                        <li><a href="index-5.html">Home version 05</a></li>
-                                        <li><a href="index-6.html">Home version 06</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="menu-item-has-children"><a href="#">pages</a>
                                     <ul class="megamenu dropdown">
                                         <li class="mega-title menu-item-has-children"><a href="#">column 01</a>
