feat: Update navigation and add new pages for Jevoo Jewellery
- Refactored navigation to include links to new pages: Our Promises, Our Services, and Our Philosophy.
- Updated logo references to maintain branding consistency.
- Removed unused mobile header and off-canvas menu components for cleaner code.
- Introduced new HTML files for Our Promises, Our Services, and Our Philosophy with structured content.

--- a/corano/our-promises.html
+++ b/corano/our-promises.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Jevoo Jewellery - About Us</title>
+    <title>Jevoo Jewellery - Our Promises</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -169,7 +169,7 @@
                             <nav aria-label="breadcrumb">
                                 <ul class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="index.html"><i class="fa fa-home"></i></a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">About us</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Our Promises</li>
                                 </ul>
                             </nav>
                         </div>
@@ -179,7 +179,6 @@
         </div>
         <!-- breadcrumb area end -->
 
-        <!-- about us area start -->
         <section class="about-us section-padding">
             <div class="container">
                 <div class="row align-items-center">
@@ -192,16 +191,23 @@
                         <div class="about-content">
                             <h2 class="about-title">💎 Jevoo Jewellery</h2>
                             <h5 class="about-sub-title">Crafted for You. Inspired by You.</h5>
-                            <p>🕊️ About Us</p>
-                            <p>At Jevoo Jewellery, we believe that true luxury lies in individual expression. Founded on the idea of Jewel + For + You, Jevoo is a bespoke jewellery house dedicated to transforming your imagination into timeless elegance.</p>
-                            <p>Every piece we create is handcrafted to order — designed from your ideas, refined by our artisans, and perfected through the finest materials and techniques. Whether you come to us with a concept, a sketch, or a story, our design team will bring it to life with precision, passion, and artistry.</p>
-                            <p>From classic engagement rings to modern heirlooms, Jevoo stands for personalised luxury that's truly yours — not mass produced, but made with care, character, and purpose.</p>
+                            <p>💫 Our Promises</p>
+                            <p>We understand that jewellery is more than an accessory — it’s a reflection of who you are. That’s why Jevoo Jewellery is built on three unshakable pillars:
+                            </p>
+                            <p>1. Authenticity You Can Trust
+                                Every gemstone and precious metal we use is independently certified and ethically sourced. We provide full transparency on every creation, and offer a 100% money-back guarantee if any gold, diamond, or gemstone is ever found to be non-genuine or misrepresented.</p>
+                            <p>2. Craftsmanship Without Compromise
+                                Our master craftsmen blend traditional artistry with modern design technology to achieve flawless detail. From initial concept to final polish, every Jevoo piece is meticulously crafted to exceed expectation.
+                            </p>
+                            <p>
+                                3. Customisation Beyond Limits
+                                Your vision is our blueprint. Whether inspired by an existing design, a memory, or your imagination — Jevoo can customise any style or concept to perfection.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- about us area end -->
 
         <!-- choosing area start -->
         <div class="choosing-area section-padding pt-0">
@@ -736,4 +742,4 @@
     <script src="components/navigation-loader.js"></script>
 </body>
 
-</html>
+</html>   
