--- a/corano/our-services.html
+++ b/corano/our-services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Jevoo Jewellery - About Us</title>
+    <title>Jevoo Jewellery - Our Services</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -100,6 +100,7 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li class="active"><a href="about-us.html">About Us</a></li>
                                             <li class="active"><a href="our-promises.html">Our Promises</a></li>
+                                            <li class="active"><a href="our-services.html">Our Services</a></li>
                                         </ul>
                                     </nav>
                                     <!-- main menu navbar end -->
@@ -169,7 +170,7 @@
                             <nav aria-label="breadcrumb">
                                 <ul class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="index.html"><i class="fa fa-home"></i></a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">About us</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Our Services</li>
                                 </ul>
                             </nav>
                         </div>
@@ -179,7 +180,6 @@
         </div>
         <!-- breadcrumb area end -->
 
-        <!-- about us area start -->
         <section class="about-us section-padding">
             <div class="container">
                 <div class="row align-items-center">
@@ -192,16 +192,17 @@
                         <div class="about-content">
                             <h2 class="about-title">💎 Jevoo Jewellery</h2>
                             <h5 class="about-sub-title">Crafted for You. Inspired by You.</h5>
-                            <p>🕊️ About Us</p>
-                            <p>At Jevoo Jewellery, we believe that true luxury lies in individual expression. Founded on the idea of Jewel + For + You, Jevoo is a bespoke jewellery house dedicated to transforming your imagination into timeless elegance.</p>
-                            <p>Every piece we create is handcrafted to order — designed from your ideas, refined by our artisans, and perfected through the finest materials and techniques. Whether you come to us with a concept, a sketch, or a story, our design team will bring it to life with precision, passion, and artistry.</p>
-                            <p>From classic engagement rings to modern heirlooms, Jevoo stands for personalised luxury that's truly yours — not mass produced, but made with care, character, and purpose.</p>
+                            <p>💫 Our Services</p>
+                            <p>✨ Bespoke Design Consultation Discuss your dream piece directly with our designers.
+                            </p>
+                            <p>✨ 3D Digital Preview View your design in realistic renderings before production begins.</p>
+                            <p>✨ Material & Gem Selection Choose from certified diamonds, natural gemstones, or premium lab-grown stones.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- about us area end -->
 
         <!-- choosing area start -->
         <div class="choosing-area section-padding pt-0">
@@ -736,4 +737,4 @@
     <script src="components/navigation-loader.js"></script>
 </body>
 
-</html>
+</html>   
