--- a/corano/index.html
+++ b/corano/index.html
@@ -296,7 +296,8 @@
             <div class="hero-slider-active slick-arrow-style slick-arrow-style_hero slick-dot-style">
                 <!-- single slider item start -->
                 <div class="hero-single-slide hero-overlay">
-                    <div class="hero-slider-item bg-img" data-bg="assets/img/slider/home1-slide2.jpg">
+                    <!-- <div class="hero-slider-item bg-img" data-bg="assets/img/slider/home1-slide2.jpg"> -->
+                    <div class="hero-slider-item bg-img" data-bg="assets/img/banner-gold.png">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -314,7 +315,8 @@
 
                 <!-- single slider item start -->
                 <div class="hero-single-slide hero-overlay">
-                    <div class="hero-slider-item bg-img" data-bg="assets/img/slider/home1-slide3.jpg">
+                    <!-- <div class="hero-slider-item bg-img" data-bg="assets/img/slider/home1-slide3.jpg"> -->
+                    <div class="hero-slider-item bg-img" data-bg="assets/img/banner-gold.png">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -332,7 +334,8 @@
 
                 <!-- single slider item start -->
                 <div class="hero-single-slide hero-overlay">
-                    <div class="hero-slider-item bg-img" data-bg="assets/img/slider/home1-slide1.jpg">
+                    <!-- <div class="hero-slider-item bg-img" data-bg="assets/img/slider/home1-slide1.jpg"> -->
+                    <div class="hero-slider-item bg-img" data-bg="assets/img/banner-gold.png">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
